--- a/horizontal-scroll-component/src/index.css
+++ b/horizontal-scroll-component/src/index.css
@@ -3,19 +3,19 @@
 
 :root {
   --text: hsl(0, 0%, 7%);
-  --background: #ffffff;
-  --primary: #f6f5f4;
+  --background: hsl(0, 0%, 98%);
+  --primary: hsl(0, 0%, 85%);
   --secondary: hsl(0, 0%, 57%);
   --accent: hsl(209, 91%, 50%);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --text: hsl(270, 20%, 95%);
-    --background: hsl(240, 20%, 13%);
-    --primary: #f6f5f4;
-    --secondary: hsla(140, 2%, 30%, 0.3);
-    --accent: hsl(77, 22%, 41%);
+    --text: hsl(0, 0%, 15%);
+    --background: hsl(0, 0%, 75%);
+    --primary: hsl(0, 0%, 65%);
+    --secondary: hsl(0, 0%, 45%);
+    --accent: hsl(222, 100%, 50%);
   }
 }
 
@@ -127,13 +127,13 @@ p {
 .cover a img {
   z-index: 10;
   border-radius: 1rem;
-  box-shadow: 0 1rem 1rem hsl(0, 0%, 88%);
+  box-shadow: 0 1rem 1rem var(--secondary);
   transition: all 240ms ease-in;
 }
 
 .cover a img:hover {
   transform: translateY(-7px);
-  box-shadow: 0 1.3rem 1rem hsl(0, 0%, 90%);
+  box-shadow: 0 1.3rem 1.5rem var(--secondary);
 }
 .cover__illustration {
   position: absolute;
@@ -175,6 +175,7 @@ p {
   direction: ltr;
   padding: 1rem;
   border: 1px solid var(--secondary);
+  background-color: var(--primary);
   display: flex;
   flex-flow: column;
 
